# haveged

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  cc_oi.sh  config.h.in  configure  configure.ac  haveged.c  haveged.spec  make.sh
contrib/: haveged_fedora
contrib/diags/: bins.p  data_prep.c
contrib/fedora12/: README  fix_initrddir_path.patch  fix_sbin_install_location.patch  haveged.spec
debian/: README.source  changelog  control  copyright  gbp.conf  haveged.default  haveged.install  init.d  libhavege-dev.install  libhavege1.install  libhavege1.symbols  postinst  postrm  prerm  rules  upstream-signing-key.pgp  watch
debian/patches/: 0001-Add-generic-clock-retrieval-function.patch  0001-Remove-support-for-CPUID-on-ia64.patch  0002-Output-some-progress-during-CUSUM-and-RANDOM-EXCURSI.patch  0002-Remove-support-for-CPUID-on-ia64.patch  0003-Fix-misaligned-double-calculation-on-MIPS.patch  series
ent/: Makefile.am  Makefile.in  entest.c  test.sh
init.d/: Makefile.am  Makefile.in  haveged  service.fedora
man/: Makefile.am  Makefile.in  haveged.8  libhavege.3
nist/: Makefile.am  Makefile.in  cephes-protos.h  mconf.h  nist.c  nist.h  packtest.c  test.sh
src/: Makefile.am  Makefile.in  havege.c  havege.h  havegecollect.c  havegecollect.h  haveged  haveged.c  haveged.dynamic  haveged.h  havegedef.h  havegetest.c  havegetest.h  havegetune.c  havegetune.h  loopbody.h  oneiteration.h
